{
  "version": 4,
  "terraform_version": "1.10.0",
  "serial": 466,
  "lineage": "b4d8c3fd-e724-425e-068a-79ed39e7ede9",
  "resources": [
    {
      "module": "module.database",
      "mode": "managed",
      "type": "aws_instance",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cd40f70965ef6ada",
            "arn": "arn:aws:ec2:eu-west-2:868563386407:instance/i-0c3cd4f480b53eedf",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "exmpl-dev-eb-db",
            "id": "i-0c3cd4f480b53eedf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0af8eb3adada61ac9"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0af8eb3adada61ac9",
            "private_dns": "ip-10-0-128-10.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.128.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e78130187109eb26",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-021447d02049c438b",
            "tags": {
              "Name": "exmpl-dev-mongodb"
            },
            "tags_all": {
              "Name": "exmpl-dev-mongodb"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03713a9ccc95f7698"
            ]
          },
          "dependencies": [
            "module.database.aws_iam_instance_profile.eb_db",
            "module.database.aws_iam_role.eb_db",
            "module.database.aws_network_interface.db",
            "module.database.aws_security_group.this",
            "module.database.data.aws_ami.elastic_beanstalk",
            "module.networking.aws_subnet.private_subnets",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.this",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.database",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:868563386407:network-interface/eni-0af8eb3adada61ac9",
            "attachment": [
              {
                "attachment_id": "eni-attach-02d7d7a29e6e8ac57",
                "device_index": 0,
                "instance": "i-0c3cd4f480b53eedf"
              }
            ],
            "id": "eni-0af8eb3adada61ac9",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:ae:50:4d:0f:c1",
            "owner_id": "868563386407",
            "private_dns_name": "ip-10-0-128-10.eu-west-2.compute.internal",
            "private_ip": "10.0.128.10",
            "private_ip_list": [
              "10.0.128.10"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.128.10"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-03713a9ccc95f7698"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-021447d02049c438b"
          },
          "dependencies": [
            "module.database.aws_security_group.this",
            "module.networking.aws_subnet.private_subnets",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.this",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.database",
      "mode": "managed",
      "type": "aws_route",
      "name": "application_to_database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.128.0/18",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0fc2b5b5f98fd88834206792345",
            "instance_id": "i-0c3cd4f480b53eedf",
            "instance_owner_id": "868563386407",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "eni-0af8eb3adada61ac9",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fc2b5b5f98fd8883",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.database.aws_network_interface.db",
            "module.database.aws_security_group.this",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.private_subnets",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.this",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.database",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:868563386407:security-group/sg-03713a9ccc95f7698",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03713a9ccc95f7698",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "exmpl-dev-eb-db-sg",
            "name_prefix": "",
            "owner_id": "868563386407",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a57954cb29f7bd10"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.database",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:868563386407:security-group-rule/sgr-0b8ce4e23c83af321",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0b8ce4e23c83af321",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-03713a9ccc95f7698",
            "security_group_rule_id": "sgr-0b8ce4e23c83af321",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.database.aws_security_group.this",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.database",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_all_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:868563386407:security-group-rule/sgr-07f326be4e57f5d3a",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-07f326be4e57f5d3a",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-03713a9ccc95f7698",
            "security_group_rule_id": "sgr-07f326be4e57f5d3a",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.database.aws_security_group.this",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.elastic_beanstalk",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:868563386407:security-group/sg-06a067904a6931b10",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06a067904a6931b10",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "exmpl-dev-eb-sg",
            "name_prefix": "",
            "owner_id": "868563386407",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a57954cb29f7bd10"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.elastic_beanstalk",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:868563386407:security-group-rule/sgr-0cbe613c1467287a9",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0cbe613c1467287a9",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-06a067904a6931b10",
            "security_group_rule_id": "sgr-0cbe613c1467287a9",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.elastic_beanstalk.aws_security_group.this",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.elastic_beanstalk",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_p80_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:868563386407:security-group-rule/sgr-067530a5c014b3e22",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-067530a5c014b3e22",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-06a067904a6931b10",
            "security_group_rule_id": "sgr-067530a5c014b3e22",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.elastic_beanstalk.aws_security_group.this",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0daf83d802b5bd398",
            "arn": "arn:aws:ec2:eu-west-2:868563386407:elastic-ip/eipalloc-0daf83d802b5bd398",
            "association_id": "eipassoc-0e5bbbf73984a4beb",
            "domain": "vpc",
            "id": "eipalloc-0daf83d802b5bd398",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-086f612d31fa5fd30",
            "private_dns": "ip-10-0-62-35.eu-west-2.compute.internal",
            "private_ip": "10.0.62.35",
            "public_dns": "ec2-18-171-116-66.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.171.116.66",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:868563386407:internet-gateway/igw-0817ab526cb6bebef",
            "id": "igw-0817ab526cb6bebef",
            "owner_id": "868563386407",
            "vpc_id": "vpc-0a57954cb29f7bd10"
          },
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0daf83d802b5bd398",
            "association_id": "eipassoc-0e5bbbf73984a4beb",
            "connectivity_type": "public",
            "id": "nat-0fe1709a7076a1352",
            "network_interface_id": "eni-086f612d31fa5fd30",
            "private_ip": "10.0.62.35",
            "public_ip": "18.171.116.66",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f2502f47fb745488"
          },
          "dependencies": [
            "module.networking.aws_eip.nat_gateway",
            "module.networking.aws_internet_gateway.this",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.this",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b6eba436f38b6e5a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0fe1709a7076a1352",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b6eba436f38b6e5a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.nat_gateway",
            "module.networking.aws_internet_gateway.this",
            "module.networking.aws_nat_gateway.this",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.this",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0817ab526cb6bebef",
            "id": "r-rtb-0fc2b5b5f98fd88831080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fc2b5b5f98fd8883",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.this",
            "module.networking.aws_route_table.public",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:868563386407:route-table/rtb-0b6eba436f38b6e5a",
            "id": "rtb-0b6eba436f38b6e5a",
            "owner_id": "868563386407",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0fe1709a7076a1352",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a57954cb29f7bd10"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:868563386407:route-table/rtb-0fc2b5b5f98fd8883",
            "id": "rtb-0fc2b5b5f98fd8883",
            "owner_id": "868563386407",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0817ab526cb6bebef",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.128.0/18",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-0af8eb3adada61ac9",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a57954cb29f7bd10"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-021447d02049c438b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c01a554d0e223a04",
            "route_table_id": "rtb-0b6eba436f38b6e5a",
            "subnet_id": "subnet-021447d02049c438b"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private_subnets",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.this",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "subnet-07c7227792a46a14c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-003340c95eb9add28",
            "route_table_id": "rtb-0b6eba436f38b6e5a",
            "subnet_id": "subnet-07c7227792a46a14c"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private_subnets",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.this",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-0b0a6ef3ac0ac5ac9",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bae62d43c64be873",
            "route_table_id": "rtb-0fc2b5b5f98fd8883",
            "subnet_id": "subnet-0b0a6ef3ac0ac5ac9"
          },
          "dependencies": [
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.this",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "subnet-0f2502f47fb745488",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03201edabeaf8ee6d",
            "route_table_id": "rtb-0fc2b5b5f98fd8883",
            "subnet_id": "subnet-0f2502f47fb745488"
          },
          "dependencies": [
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.this",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:868563386407:subnet/subnet-021447d02049c438b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.128.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-021447d02049c438b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "868563386407",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "exmpl-dev-private-az1"
            },
            "tags_all": {
              "Name": "exmpl-dev-private-az1"
            },
            "vpc_id": "vpc-0a57954cb29f7bd10"
          },
          "dependencies": [
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.this",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:868563386407:subnet/subnet-07c7227792a46a14c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.192.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07c7227792a46a14c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "868563386407",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "exmpl-dev-private-az2"
            },
            "tags_all": {
              "Name": "exmpl-dev-private-az2"
            },
            "vpc_id": "vpc-0a57954cb29f7bd10"
          },
          "dependencies": [
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.this",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:868563386407:subnet/subnet-0f2502f47fb745488",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.0.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f2502f47fb745488",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "868563386407",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "exmpl-dev-public-az1"
            },
            "tags_all": {
              "Name": "exmpl-dev-public-az1"
            },
            "vpc_id": "vpc-0a57954cb29f7bd10"
          },
          "dependencies": [
            "module.networking.aws_vpc.this",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:868563386407:subnet/subnet-0b0a6ef3ac0ac5ac9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.64.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b0a6ef3ac0ac5ac9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "868563386407",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "exmpl-dev-public-az2"
            },
            "tags_all": {
              "Name": "exmpl-dev-public-az2"
            },
            "vpc_id": "vpc-0a57954cb29f7bd10"
          },
          "dependencies": [
            "module.networking.aws_vpc.this",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:868563386407:vpc/vpc-0a57954cb29f7bd10",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0974a87d6cece0dac",
            "default_route_table_id": "rtb-06b496956d06fe951",
            "default_security_group_id": "sg-04dbf310fb7b20246",
            "dhcp_options_id": "dopt-0bbb01a6966faa1e6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a57954cb29f7bd10",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06b496956d06fe951",
            "owner_id": "868563386407",
            "tags": {
              "Name": "exmpl-dev"
            },
            "tags_all": {
              "Name": "exmpl-dev"
            }
          }
        }
      ]
    }
  ]
}